Add signature for gateway
