# cmd/gateway/routes/user.go
@@ -7,10 +7,9 @@ import "github.com/gofiber/fiber/v2"
 
 
 type User struct {
-	Status  bool        `json:"status"`
-    Code    int         `json:"code"`
-    Message string      `json:"message"`
-    Data    interface{} `json:"data"`
+	Name  string `json:"name"`
+	Email string `json:"email"`
+	Password string `json:"password"`
 }
 
 // =================== Dummy Handlers untuk Swagger ===================
@@ -18,6 +17,8 @@ type User struct {
 // @Summary Get all users
 // @Description Get list of users
 // @Tags users
+// @Security X-Signature
+// @Security X-Timestamp
 // @Produce json
 // @Success 200 {array} routes.User
 // @Router /users [get]
@@ -26,6 +27,8 @@ func GetUsersHandler(c *fiber.Ctx) error { return nil }
 // @Summary Get user by ID
 // @Description Get single user
 // @Tags users
+// @Security X-Signature
+// @Security X-Timestamp
 // @Produce json
 // @Param id path string true "User ID"
 // @Success 200 {object} routes.User
@@ -35,6 +38,8 @@ func GetUserHandler(c *fiber.Ctx) error { return nil }
 // @Summary Create user
 // @Description Create new user
 // @Tags users
+// @Security X-Signature
+// @Security X-Timestamp
 // @Accept json
 // @Produce json
 // @Param user body routes.User true "User info"
@@ -45,6 +50,8 @@ func CreateUserHandler(c *fiber.Ctx) error { return nil }
 // @Summary Update user
 // @Description Update user by ID
 // @Tags users
+// @Security X-Signature
+// @Security X-Timestamp
 // @Accept json
 // @Produce json
 // @Param id path string true "User ID"
@@ -56,6 +63,8 @@ func UpdateUserHandler(c *fiber.Ctx) error { return nil }
 // @Summary Delete user
 // @Description Delete user by ID
 // @Tags users
+// @Security X-Signature
+// @Security X-Timestamp
 // @Param id path string true "User ID"
 // @Success 200 {object} map[string]bool
 // @Router /users/{id} [delete]
